第一次更新

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
             width: 100%;
             /* background: #F0F0F0 url('img/dian2.png') repeat-x; */
         }
+        .important{
+            color: red;
+            font-weight: bolder;
+        }
     </style>
     <title>中国互联网大纪事</title>
 </head>
@@ -15,43 +19,60 @@
     <div class="page">
         <div class="box">
             <ul class="event_year">
-                <li class="current"><label for="20170111">20170111</label></li>
-                <li><label for="20170112">20170112</label></li>
-                <li><label for="20170113">20170113</label></li>
+                <li class="current"><label for="1995before">1995前</label></li>
+                <li><label for="1995">1995</label></li>
+                <li><label for="1996">1996</label></li>
+                <li><label for="1999">1999</label></li>
             </ul>
             <ul class="event_list">
                 <div>
-                    <h3 id="20170111">20170111</h3>
+                    <h3 id="1995before">1995前</h3>
                     <li>
-                        <span>20170111 22:32:45</span>
-                        <p><span>出入口系统<a href="f?p='||V('APP_ID')||':122:'||V('SESSION')||':::::"></a></span></p>
+                        <span>1993-3-2</span>
+                        <p>
+                            <span>中科院高能物理研究所租用AT&T公司的国际卫星信道建立的接入美国SLAC国家实验室的64K专线正式开通，成为我国部分连入互联网的第一根专线</span>
+                        </p>
+
                     </li>
                     <li>
-                        <span>20170111 21:00:31</span>
-                        <p><span>停车场系统<a href="f?p='||V('APP_ID')||':122:'||V('SESSION')||':::::"></a></span></p>
-                    </li>
-                    <li>
-                        <span>20170111 17:30:45</span>
-                        <p><span>楼宇门禁系统<a href="f?p='||V('APP_ID')||':122:'||V('SESSION')||':::::"></a></span></p>
-                    </li>
- 
-                </div>
-                <div>
-                    <h3 id="20170112">20170112</h3>
-                    <li>
-                        <span>20170112 14:03:41</span>
-                        <p><span>视频监控系统<a href="f?p='||V('APP_ID')||':122:'||V('SESSION')||':::::"></a></span></p>
-                    </li>
-                    <li>
-                        <span>20170112 11:24:47</span>
-                        <p><span>电子巡更系统<a href="f?p='||V('APP_ID')||':122:'||V('SESSION')||':::::"></a></span></p>
+                        <span>1994-4-20</span>
+                        <p class="important"><span>64K国际专线开通，中国开始以国家身份进入互联网</span></p>
                     </li>
                 </div>
                 <div>
-                    <h3 id="20170113">20170113</h3>
-                    <li><span>20170112 14:03:41</span><p><span>视频监控系统<a href="f?p='||V('APP_ID')||':122:'||V('SESSION')||':::::"></a></span></p></li>
-                    <li><span>20170112 14:03:41</span><p><span>视频监控系统<a href="f?p='||V('APP_ID')||':122:'||V('SESSION')||':::::"></a></span></p></li>
+                    <h3 id="1995">1995-互联网商业元年</h3>
+                    <li>
+                        <span>1995-1</span>
+                        <p><span>中国电信开通北京，上海接入 Internet 的节点</span></p>
+                    </li>
+                    <li>
+                        <span>1995初</span>
+                        <p class="important"><span>马云作为翻译来到洛杉矶，第一次认识到了互联网</span></p>
+                    </li>
+                    <li>
+                        <span>1995-4</span>
+                        <p><span>杭州海博电脑服务有限公司成立【马云】</span></p>
+                    </li>
+                    <li>
+                        <span>1995-5-9</span>
+                        <p><span>中国黄页上线【马云】</span></p>
+                    </li>
                 </div>
+                <div>
+                    <h3 id="1996">1996-海归归来</h3>
+                    <li>
+                        <span>1996-3</span>
+                        <p><span>中国黄页被杭州电信收购【马云】</span></p>
+                    </li>
+                </div>
+                <div>
+                    <h3 id="1999">1999-狂欢开始</h3>
+                    <li>
+                        <span>1999-2</span>
+                        <p><span>马云在杭州创建阿里巴巴【马云】</span></p>
+                    </li>
+                </div>
+
             </ul>
             <div class="clearfix"></div>
         </div>
