修改了一下样式

--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="font-awesome.min.css">
     <style>
         .page {
             width: 100%;
+            font-weight: bold;
+            color: #666;
             /* background: #F0F0F0 url('img/dian2.png') repeat-x; */
         }
         .important{
             color: red;
             font-weight: bolder;
+        }
+        .page h3{
+            font-style: normal;
+            color: black;
         }
     </style>
     <title>中国互联网大纪事</title>
@@ -22,12 +30,12 @@
                 <li class="current"><label for="1995before">1995前</label></li>
                 <li><label for="1995">1995</label></li>
                 <li><label for="1996">1996</label></li>
-                <li><label for="1996">1997</label></li>
+                <li><label for="1997">1997</label></li>
                 <li><label for="1999">1999</label></li>
             </ul>
             <ul class="event_list">
                 <div>
-                    <h3 id="1995before">1995前</h3>
+                    <h3 id="1995before"><i class="fa fa-clock-o"></i>&nbsp; 1995前</h3>
                     <li>
                         <span>1993-3-2</span>
                         <p>
@@ -41,7 +49,7 @@
                     </li>
                 </div>
                 <div>
-                    <h3 id="1995">1995-互联网商业元年</h3>
+                    <h3 id="1995"><i class="fa fa-clock-o"></i>&nbsp;1995-互联网商业元年</h3>
                     <li>
                         <span>1995-1</span>
                         <p><span>中国电信开通北京，上海接入 Internet 的节点</span></p>
@@ -68,14 +76,14 @@
                     </li>
                 </div>
                 <div>
-                    <h3 id="1996">1996-海归归来</h3>
+                    <h3 id="1996"><i class="fa fa-clock-o"></i>&nbsp;1996-海归归来</h3>
                     <li>
                         <span>1996-3</span>
                         <p><span>中国黄页被杭州电信收购【马云】</span></p>
                     </li>
                 </div>
                 <div>
-                    <h3 id="1997">1997-大门洞开</h3>
+                    <h3 id="1997"><i class="fa fa-clock-o"></i>&nbsp;1997-大门洞开</h3>
                     <li>
                         <span>1997-1-15</span>
                         <p><span>ChinaByte 正式开通【人民日报社与新闻集团（默多克）共同投资建立】</span></p>
@@ -86,7 +94,7 @@
                     </li>
                 </div>
                 <div>
-                    <h3 id="1999">1999-狂欢开始</h3>
+                    <h3 id="1999"><i class="fa fa-clock-o"></i>&nbsp;1999-狂欢开始</h3>
                     <li>
                         <span>1999-2</span>
                         <p><span>马云在杭州创建阿里巴巴【马云】</span></p>
