--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 <li><label for="1997">1997</label></li>
                 <li><label for="1998">1998</label></li>
                 <li><label for="1999">1999</label></li>
+                <li><label for="2001">2001</label></li>
                 <li><label for="2005">2005</label></li>
+                <li><label for="2007">2007</label></li>
             </ul>
             <ul class="event_list">
                 <div>
@@ -74,7 +76,7 @@
                     </li>
                     <li>
                         <span>1995-11-1</span>
-                        <p><span>张朝阳回国创业【张朝阳】</span></p>
+                        <p class="important"><span>张朝阳回国创业【张朝阳】</span></p>
                     </li>
                 </div>
                 <div>
@@ -91,19 +93,39 @@
                         <p><span>ChinaByte 正式开通【人民日报社与新闻集团（默多克）共同投资建立】</span></p>
                     </li>
                     <li>
+                        <span>1997-5</span>
+                        <p class="important"><span>网易公司成立【丁磊】</span></p>
+                    </li>
+                    <li>
+                        <span>1997-6</span>
+                        <p><span>中华网于开曼群岛注册【新华社】</span></p>
+                    </li>
+                    <li>
                         <span>1997-11</span>
-                        <p><span>张朝阳将搜乎更名为搜狐，搜狐公司正式成立【张朝阳】</span></p>
+                        <p class="important"><span>张朝阳将搜乎更名为搜狐，搜狐公司正式成立【张朝阳】</span></p>
                     </li>
                 </div>
                 <div>
                     <h3 id="1998"><i class="fa fa-clock-o"></i>&nbsp;1998-极客当道</h3>
                     <li>
                         <span>1998</span>
-                        <p><span>人民日报创建人民网</span></p>
+                        <p class="important"><span>人民日报创建人民网</span></p>
                     </li>
                     <li>
-                        <span>1999-7-14</span>
-                        <p><span>ChinaByte 于美国纳斯达克上市，成为第一家在海外上市的中国互联网公司</span></p>
+                        <span>1998-初</span>
+                        <p><span>中文网络游戏平台联众成立【鲍岳桥，简晶，王建华】</span></p>
+                    </li>
+                    <li>
+                        <span>1998-3</span>
+                        <p><span>网易拿下 163.net 免费邮箱系统</span></p>
+                    </li>
+                    <li>
+                        <span>1998-10</span>
+                        <p><span>周鸿祎回京开始创业【周鸿祎】</span></p>
+                    </li>
+                    <li>
+                        <span>1998-11-11</span>
+                        <p class="important"><span>腾讯成立【马化腾，张志东，曾李青等 5 人】</span></p>
                     </li>
                 </div>
                 <div>
@@ -118,14 +140,28 @@
                     </li>
                 </div>
                 <div>
+                    <h3 id="2001"><i class="fa fa-clock-o"></i>&nbsp;2001-大转折</h3>
+                    <li>
+                        <span>2001-4</span>
+                        <p><span>天极网与 ChinaByte 合并</span></p>
+                    </li>
+                </div>
+                <div>
                     <h3 id="2005"><i class="fa fa-clock-o"></i>&nbsp;2005-草根冲击波</h3>
                     <li>
                         <span>2005</span>
                         <p><span>去哪儿网成立【戴福瑞（美），道格拉斯（马来西亚），庄辰超】</span></p>
                     </li>
                     <li>
-                        <span>1999-7-14</span>
-                        <p><span>ChinaByte 于美国纳斯达克上市，成为第一家在海外上市的中国互联网公司</span></p>
+                        <span>2005-开春</span>
+                        <p><span>腾讯收购博大，张小龙加入腾讯</span></p>
+                    </li>
+                </div>
+                <div>
+                    <h3 id="2007"><i class="fa fa-clock-o"></i>&nbsp;2007-大开大合</h3>
+                    <li>
+                        <span>2007-年底</span>
+                        <p><span>太平洋电脑网（Pconline）于香港上市</span></p>
                     </li>
                 </div>
 
