--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <title>中国互联网大纪事</title>
 </head>
 <body>
+<!-- 
+    感受：在了解整个互联网发展的过程中，可以看到，这些企业家，技术人才等大多具有在美留学的经历，而且在那样的年代
+    80 ~ 90 年代的几批成长起来的企业家几乎都具有不错的家庭环境和高学历，不少企业家们的第一桶金源于自己的家人，朋友，亲戚等。
+    真是人生七年，真正的普通人难以想象。
+ -->
     <div class="page">
         <div class="box">
             <ul class="event_year">
@@ -86,6 +91,10 @@
                         <span>1996-3</span>
                         <p><span>中国黄页被杭州电信收购【马云】</span></p>
                     </li>
+                    <li>
+                        <span>1996-4</span>
+                        <p><span>超链分析术（人气质量定律 | 搜索引擎第二定律）的雏形诞生【李彦宏】</span></p>
+                    </li>
                 </div>
                 <div>
                     <h3 id="1997"><i class="fa fa-clock-o"></i>&nbsp;1997-大门洞开</h3>
@@ -136,6 +145,10 @@
                         <p class="important"><span>马云在杭州创建阿里巴巴【马云】</span></p>
                     </li>
                     <li>
+                        <span>1999-3</span> 
+                        <p><span>8848 电子商务网站试开通</span></p>
+                    </li>
+                    <li>
                         <span>1999-5</span> 
                         <p><span>中国红客联盟诞生【北约轰炸中国驻南斯拉夫大使馆】</span></p>
                     </li>
@@ -143,9 +156,25 @@
                         <span>1999-7-14</span>
                         <p><span>ChinaByte 于美国纳斯达克上市，成为第一家在海外上市的中国互联网公司</span></p>
                     </li>
+                    <li>
+                        <span>1999-9</span>
+                        <p><span>亿唐公司成立【唐海松】</span></p>
+                    </li>
+                    <li>
+                        <span>1999-11</span>
+                        <p><span>盛大成立【陈天桥】</span></p>
+                    </li>
+                    <li>
+                        <span>1999-年底</span>
+                        <p class="important"><span>百度成立【李彦宏】</span></p>
+                    </li>
                 </div>
                 <div>
                     <h3 id="2000"><i class="fa fa-clock-o"></i>&nbsp;2000-泡沫四溢</h3>
+                    <li>
+                        <span>2000-5-11</span> 
+                        <p><span>新卓越网成立【雷军】</span></p>
+                    </li>
                     <li>
                         <span>2000-2</span> 
                         <p class="important"><span>中国第一款网游“人在江湖”诞生</span></p>
