--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     感受：在了解整个互联网发展的过程中，可以看到，这些企业家，技术人才等大多具有在美留学的经历，而且在那样的年代
     80 ~ 90 年代的几批成长起来的企业家几乎都具有不错的家庭环境和高学历，不少企业家们的第一桶金源于自己的家人，朋友，亲戚等。
     真是人生七年，真正的普通人难以想象。
+
+    1. 互联网企业的痛点在于赢利点在哪里
  -->
     <div class="page">
         <div class="box">
@@ -189,6 +191,14 @@
                     <li>
                         <span>2001-5</span>
                         <p class="important"><span>中美黑客大战【由中美撞机事件引发】</span></p>
+                    </li>
+                    <li>
+                        <span>2001-5-8</span>
+                        <p><span>网易假账风波</span></p>
+                    </li>
+                    <li>
+                        <span>2001-11-10</span>
+                        <p class="important"><span>中国加入世贸组织</span></p>
                     </li>
                 </div>
                 <div>
