新增：更新部分内容；新增本地服务器

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             width: 100%;
             font-weight: bold;
             color: #666;
-            /* background: #F0F0F0 url('img/dian2.png') repeat-x; */
         }
         .important{
             color: red;
@@ -27,9 +26,11 @@
 <!-- 
     感受：在了解整个互联网发展的过程中，可以看到，这些企业家，技术人才等大多具有在美留学的经历，而且在那样的年代
     80 ~ 90 年代的几批成长起来的企业家几乎都具有不错的家庭环境和高学历，不少企业家们的第一桶金源于自己的家人，朋友，亲戚等。
+
+    特别是看到有些地方，书中描述，A 和 B 往往通过一种“魔幻”的关系网认识，我想这背后应该存在书中未曾描述的逻辑。
     真是人生七年，真正的普通人难以想象。
 
-    1. 互联网企业的痛点在于赢利点在哪里
+
  -->
     <div class="page">
         <div class="box">
@@ -91,7 +92,7 @@
                     <h3 id="1996"><i class="fa fa-clock-o"></i>&nbsp;1996-海归归来</h3>
                     <li>
                         <span>1996-3</span>
-                        <p><span>中国黄页被杭州电信收购【马云】</span></p>
+                        <p><span>中国黄页被杭州电信收购【马云】</span></p> 
                     </li>
                     <li>
                         <span>1996-4</span>
